--- a/day06_module_and_io.ipynb
+++ b/day06_module_and_io.ipynb
@@ -19,6 +19,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#asdasd"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "goP2BMG0lZcr"
