--- a/day06_module_and_io.ipynb
+++ b/day06_module_and_io.ipynb
@@ -1656,7 +1656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -1677,6 +1677,62 @@
         "            break\n",
         "\n",
         "        print(string, end = '')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "안녕하세요.\n",
+            "반갑습니다.\n",
+            "반갑습니다.\t\t\t\t\t반갑습니다.\n"
+          ]
+        }
+      ],
+      "source": [
+        "with open('./test1.txt') as file:\n",
+        "    while True:\n",
+        "        string = file.readline()\n",
+        "\n",
+        "        if string == '':\n",
+        "            break\n",
+        "\n",
+        "        print(string, end = '')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "with open('./test1.txt') as file:\n",
+        "    string = file.readlines()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['안녕하세요.\\n', '반갑습니다.\\n', '반갑습니다.\\t\\t\\t\\t\\t반갑습니다.\\n']"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "string"
       ]
     },
     {
@@ -1709,6 +1765,93 @@
         "\n",
         "라인 전체를 모두 읽어 각 라인 단위로 리스트에 저장하는 메소드.  \n",
         "enumerate를 이용하면 라인 번호도 함께 출력 가능"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1th trial. Incorrect\n",
+            "plat time: 0.6656041145324707\n",
+            "2th trial. Incorrect\n",
+            "plat time: 1.0954186916351318\n",
+            "3th trial. Incorrect\n",
+            "plat time: 1.5202100276947021\n",
+            "exceed maximum trial\n"
+          ]
+        }
+      ],
+      "source": [
+        "import random\n",
+        "import time\n",
+        "\n",
+        "\n",
+        "\n",
+        "def input_integer():\n",
+        "    try:\n",
+        "        user_input_number = int(input('Enter number: '))\n",
+        "        return user_input_number\n",
+        "    except:\n",
+        "        file.write(f\"{user_input_number}은 정수가 아닙니다.\\n\")\n",
+        "        return input_integer()\n",
+        "\n",
+        "with open('log.log', 'w') as file:\n",
+        "    start_time = time.time()\n",
+        "    file.write(f'[{time.ctime(time.time())}]')\n",
+        "    ANSWER = random.randrange(1, 31)\n",
+        "    # ANSWER = 15\n",
+        "\n",
+        "    file.write(f'[{time.ctime(time.time())}] 정답: {ANSWER}\\n')\n",
+        "    trial = 0\n",
+        "\n",
+        "    while True:\n",
+        "        trial += 1\n",
+        "        if trial > 3:\n",
+        "            print('exceed maximum trial')\n",
+        "            file.write(f'[{time.ctime(time.time())}] 입력횟수 초과\\n')\n",
+        "\n",
+        "            break\n",
+        "        user_input_number = input_integer()\n",
+        "        file.write(f'[{time.ctime(time.time())}] 사용자가 입력한 수: {user_input_number}\\n')\n",
+        "\n",
+        "\n",
+        "        if user_input_number == ANSWER:\n",
+        "            print(f\"{trial}th trial. corredct\")\n",
+        "            file.write(f'[{time.ctime(time.time())}] 횟수 {trial} correct\\n')\n",
+        "            break\n",
+        "        else:\n",
+        "            print(f\"{trial}th trial. Incorrect\")\n",
+        "            file.write(f'[{time.ctime(time.time())}] 횟수 {trial} incorrect\\n')\n",
+        "\n",
+        "        print(f'plat time: {time.time() - start_time}')\n",
+        "        file.write(f'[{time.ctime(time.time())}] play time: {time.time() - start_time}\\n')\n",
+        "\n",
+        "    \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['asdasdasd', 'asdasd', 'asd']"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "\"asdasdasd asdasd asd\".split(\" \")"
       ]
     },
     {
