--- a/day07_closure_generator_decorator.ipynb
+++ b/day07_closure_generator_decorator.ipynb
@@ -93,6 +93,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = sum\n",
+    "a([1,2,3])\n",
+    "a = max\n",
+    "a([1,2,3])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today is a monday\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_day(day):\n",
+    "    message = f'Today is a {day}'\n",
+    "\n",
+    "    def print_message():\n",
+    "        print(message)\n",
+    "\n",
+    "    return print_message\n",
+    "\n",
+    "day = print_day('monday')\n",
+    "day()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Today is a monday'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(a)\n",
+    "dir(day)\n",
+    "day.__closure__[0].cell_contents"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,10 +178,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#closure은 전역변수를 안쓰려고 쓰는 기법"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,6 +259,179 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = (i for i in range(10))\n",
+    "\n",
+    "for i in a:\n",
+    "    if i == 5:\n",
+    "        break\n",
+    "    print(i)\n",
+    "list(a)\n",
+    "\n",
+    "#제너레이터는 내부 데이터를 활용하면 다시 활용할 수 없다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = (i for i in range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test():\n",
+    "    yield 1\n",
+    "    yield 2\n",
+    "    yield 3\n",
+    "    yield 4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in test():\n",
+    "    print(i)\n",
+    "\n",
+    "list(test())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test():\n",
+    "    print(\"before 1\")\n",
+    "    yield 1\n",
+    "    print(\"after 1\")\n",
+    "    print(\"before 2\")\n",
+    "\n",
+    "    yield 2\n",
+    "    print(\"after 2\")\n",
+    "\n",
+    "    print(\"before 3\")\n",
+    "\n",
+    "    yield 3\n",
+    "    print(\"after 3\")\n",
+    "\n",
+    "    print(\"before 4\")\n",
+    "\n",
+    "    yield 4\n",
+    "    print(\"after 4\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test2():\n",
+    "    list_ = [1,\"asdasd\", 2,3,4,5]\n",
+    "    yield from list_\n",
+    "\n",
+    "b = test2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(b)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,7 +474,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 필요할때 필요한 연산만 하는것이 lazy()연산이다.\n",
+    "# 제너레이터는 데이터 효율이 좋다.\n",
+    "\n",
+    "#크롤링할때 비동기랑 멀티프로레서를 활용하면 좋은 개발자이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = (i for i in range(10))\n",
+    "\n",
+    "for i in a:\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,6 +557,121 @@
     "위의 함수는 greeting(print_hello)와 동일하다고 볼 수 있음 <br>\n",
     "위와 같이 기존 print_hello의 함수를 그대로 두고 <br>\n",
     "함수가 가지는 기능을 greeting이라고 하는 decorator를 정의하여 확장할 수 있음 <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice to meet you\n",
+      "hello\n",
+      "See you again\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greeting(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        print('Nice to meet you')\n",
+    "        func(*args, **kwargs)\n",
+    "        print('See you again')\n",
+    "\n",
+    "    return wrapper\n",
+    "\n",
+    "@greeting\n",
+    "def print_hello():\n",
+    "    print('hello')\n",
+    "\n",
+    "print_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(func):\n",
+    "    def wrapper(*args, **kwargs): #가변인자 왼쪽은 튜플, 오른쪽은 딕셔너리로 받아들이고, 안써도 되긴함\n",
+    "        print('before')\n",
+    "        func(*args, **kwargs)\n",
+    "        print('after')\n",
+    "\n",
+    "    return wrapper\n",
+    "@greeting\n",
+    "def print_hello():\n",
+    "    print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before\n",
+      "hello\n",
+      "after\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(func):\n",
+    "    def wrapper(a, b):\n",
+    "        print('before')\n",
+    "        print('after')\n",
+    "\n",
+    "        return func(a, b)\n",
+    "    return wrapper\n",
+    "@greeting\n",
+    "def add(a, b):\n",
+    "    return a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before\n",
+      "after\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = add(1, 2)\n",
+    "k"
    ]
   },
   {
@@ -317,6 +724,84 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1th trial. Incorrect\n",
+      "2th trial. Incorrect\n",
+      "3th trial. Correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "ANSWER = 21\n",
+    "\n",
+    "def input_integer():\n",
+    "    try:\n",
+    "        user_input_number = int(input('Enter number: '))\n",
+    "        return user_input_number\n",
+    "    except:\n",
+    "        return input_integer()\n",
+    "    \n",
+    "def playtime(func):\n",
+    "    def wrapper():\n",
+    "        start_time = time.time()\n",
+    "        func()\n",
+    "        return time.time() - start_time\n",
+    "    \n",
+    "    return wrapper\n",
+    "\n",
+    "@playtime\n",
+    "def game():\n",
+    "    trial = 0\n",
+    "\n",
+    "    while True:\n",
+    "        trial += 1\n",
+    "\n",
+    "        if trial > 3:\n",
+    "            print('exceed maximum trial')\n",
+    "            break\n",
+    "\n",
+    "        user_input_number = input_integer()\n",
+    "\n",
+    "        if user_input_number == ANSWER:    \n",
+    "            print(f'{trial}th trial. Correct')\n",
+    "            break\n",
+    "        \n",
+    "        print(f'{trial}th trial. Incorrect')\n",
+    "\n",
+    "\n",
+    "a = game()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.7862136363983154"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   }
  ],
  "metadata": {
@@ -335,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
